fixed shade opacity on mobiles

--- a/src/components/flow/CellShade/styles.module.scss
+++ b/src/components/flow/CellShade/styles.module.scss
@@ -2,11 +2,16 @@
 
 .shade {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  top: 0;
+  max-height: $cell;
   background: linear-gradient(5deg, transparentize($content_bg, 0), transparentize($content_bg, 1));
   pointer-events: none;
   touch-action: none;
+
+  @include tablet {
+    opacity: 0.5;
+  }
 }
